--- a/Server/index.html
+++ b/Server/index.html
@@ -195,6 +195,7 @@
                 document.body.style.backgroundImage = `url('${backgroundImage.src}')`;
                 document.body.classList.add('fade-in-background');
             };
+            fetchPlayerCount()
         })
 
         function fetchPlayerCount() {
@@ -205,14 +206,16 @@
             fetch(apiUrl)
                 .then(response => response.json())
                 .then(data => {
-                    if (data.players) {
+                    if (data.online) {
                         const onlinePlayers = data.players.online;
-                        playerCountElement.textContent = onlinePlayers
+                        playerCountElement.textContent = onlinePlayers;
+                    } else {
+                        playerCountElement.textContent = "เซิร์ฟเวอร์กำลังปิดปรับปรุง";
                     }
                 })
                 .catch(error => {
-                    console.error('Error fetching player count:', error)
-                    playerCountElement.textContent = `Error fetching player count: ${error}`
+                    console.error('Error fetching player count:', error);
+                    playerCountElement.textContent = `Error fetching player count: ${error}`;
                 });
         }
 
@@ -252,7 +255,7 @@
                 class="w-48 h-auto mb-5 animate-heartbeat_3s_ease-in-out_infinite rounded">
             <p>ไมน์คราฟต์เซิร์ฟเวอร์ <span id="yellow">CMGMMO</span></p>
             <p>เซิร์ฟเวอร์ เก็บเวลตีมอน บนไมน์คราฟต์มือถือ(Bedrock)</p>
-            <p>มีผู้คนกำลังเล่นอยู่: <span id="playerCount">0</span>/30 คน</p>
+            <p>มีผู้คนกำลังเล่นอยู่: <span id="playerCount">กำลังโหลด..</span>/30 คน</p>
             <br>
             <button id="connect-button" onclick="openMinecraft()">เพิ่มเซิร์ฟเวอร์</button>
             <button id="cmgmmodis">เข้าร่วมดิสคอร์ด..</button>
